Major UI update Added tabs (with no functionality) Created directory navigation bar with search field, navigation buttons and navigation zone Added tool bar for some basic file operations (copy, paste, delete etc.). Created menu for more view options, filter and file details buttons

--- a/FileExplorer/App.xaml
+++ b/FileExplorer/App.xaml
@@ -11,6 +11,11 @@
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
+            <Style x:Key="SmallIconButton" TargetType="Button">
+                <Setter Property="Height" Value="35" />
+                <Setter Property="Width" Value="40" />
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
