--- a/FileExplorer/MainWindow.xaml
+++ b/FileExplorer/MainWindow.xaml
@@ -7,27 +7,56 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="using:FileExplorer.Views"
+    xmlns:ui="using:FileExplorer.UI"
+    xmlns:userControls="using:FileExplorer.UI.UserControls"
     mc:Ignorable="d">
 
     <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
+
     <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
         <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="150" />
+            </Grid.ColumnDefinitions>
+            <TabView >
+                <TabViewItem Header="Home"></TabViewItem>
+                <TabViewItem Header="1"></TabViewItem>
+            </TabView>
+        </Grid>
+
+        <Grid Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="60" />
+                <RowDefinition Height="40" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Rectangle Fill="Blue" />
-            <Rectangle Grid.Row="1" Fill="Red" />
-            <Grid Row="2">
+
+            <userControls:DirectoryNavigationPanel />
+
+            <Grid Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="220" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" MinWidth="190" />
+                    <ColumnDefinition Width="5" />
+                    <ColumnDefinition Width="4*" MinWidth="200" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <Rectangle Fill="Yellow" />
-                <views:DirectoryPage Grid.Column="1" />
+
+                <ui:InteractiveGridSplitter
+                    Grid.Column="1" 
+                    ResizeBehavior="PreviousAndNext" />
+
+                <views:DirectoryPage Grid.Column="2" />
+
+                <!--TODO: File Details Menu-->
+                <Rectangle Visibility="Collapsed" Grid.Column="3" Width="300"/>
             </Grid>
         </Grid>
 
