--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -7,22 +7,111 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:systemIO="using:System.IO"
-    xmlns:viewModels="using:FileExplorer.ViewModels"
+    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+        <DataTemplate x:Key="GridItemTemplate" x:DataType="systemIO:FileSystemInfo">
+            <StackPanel  Padding="10  25 10 10">
+                <Image Source="../Resources/Folder.png" Height="95"  />
+                <TextBlock Text="{x:Bind Path=Name}" />
+            </StackPanel>
+        </DataTemplate>
+        <Style x:Key="MenuButton" TargetType="Button">
+            <Setter Property="Padding" Value="10 8"  />
+            <Setter Property="Margin" Value="0 0 10 0" />
+        </Style>
+    </Page.Resources>
 
-    <Grid Padding="20 20 8 5">
-        <GridView ItemsSource="{x:Bind Path=ViewModel.DirectoryItems}" SelectionMode="Extended">
-            <GridView.ItemTemplate>
-                <DataTemplate x:Key="ItemTemplate" x:DataType="systemIO:FileSystemInfo">
-                    <StackPanel Padding="10  25 10 10">
-                        <Image Source="../Resources/Folder.png" Height="95"  />
-                        <TextBlock Text="{x:Bind Path=Name}" />
+    <Grid Padding="20 20 5 5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="55" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid Margin="0 0 0 10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="300" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal">
+                <Button 
+                    Style="{StaticResource MenuButton}" 
+                    ToolTipService.ToolTip="New File"
+                    ToolTipService.Placement="Bottom">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">New</TextBlock>
+                        <FontIcon FontSize="12" Glyph="&#xE710;" />
                     </StackPanel>
-                </DataTemplate>
-            </GridView.ItemTemplate>
-        </GridView>
+                </Button>
+                <Button 
+                    Style="{StaticResource MenuButton}"
+                    ToolTipService.ToolTip="Copy"
+                    ToolTipService.Placement="Bottom">
+                    <FontIcon FontSize="17" Glyph="&#xE8C8;" />
+                </Button>
+                <Button 
+                    Style="{StaticResource MenuButton}"
+                    ToolTipService.ToolTip="Cut"
+                    ToolTipService.Placement="Bottom">
+                    <FontIcon FontSize="17" Glyph="&#xE8C6;" />
+                </Button>
+                <Button 
+                    Style="{StaticResource MenuButton}"
+                    ToolTipService.ToolTip="Paste"
+                    ToolTipService.Placement="Bottom">
+                    <FontIcon FontSize="17" Glyph="&#xE77F;" />
+                </Button>
+                <Button 
+                    Style="{StaticResource MenuButton}"
+                    ToolTipService.ToolTip="Rename"
+                    ToolTipService.Placement="Bottom">
+                    <FontIcon FontSize="17" Glyph="&#xE8AC;" />
+                </Button>
+                <Button 
+                    Style="{StaticResource MenuButton}"
+                    ToolTipService.ToolTip="Delete"
+                    ToolTipService.Placement="Bottom">
+                    <FontIcon FontSize="17" Glyph="&#xE74D;" />
+                </Button>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                <DropDownButton 
+                    Style="{StaticResource MenuButton}"
+                    ToolTipService.ToolTip="Change View Of Items"
+                    ToolTipService.Placement="Bottom">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">View</TextBlock>
+                        <FontIcon FontSize="12" Glyph="&#xF246;"  />
+                    </StackPanel>
+                </DropDownButton>
+                <DropDownButton 
+                    Style="{StaticResource MenuButton}"
+                    ToolTipService.ToolTip="Apply Filter"
+                    ToolTipService.Placement="Bottom">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Filter</TextBlock>
+                        <FontIcon FontSize="12" Glyph="&#xE71C;"  />
+                    </StackPanel>
+                </DropDownButton>
+                <Button 
+                    Style="{StaticResource MenuButton}" 
+                    ToolTipService.ToolTip="File Details"
+                    ToolTipService.Placement="Bottom">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Details</TextBlock>
+                        <FontIcon FontSize="14" Glyph="&#xE946;" />
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+        </Grid>
+        <controls:AdaptiveGridView Grid.Row="1" 
+            ItemsSource="{x:Bind Path=ViewModel.DirectoryItems}" 
+            ItemTemplate="{StaticResource GridItemTemplate}"
+            SelectionMode="Extended"
+            DesiredWidth="160"
+            >
+        </controls:AdaptiveGridView>
 
     </Grid>
 </Page>
