--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -6,13 +6,13 @@
     xmlns:local="using:FileExplorer.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:systemIO="using:System.IO"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:models="using:FileExplorer.Models"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
-        <DataTemplate x:Key="GridItemTemplate" x:DataType="systemIO:FileSystemInfo">
+        <DataTemplate x:Key="GridItemTemplate" x:DataType="models:DirectoryItemModel">
             <StackPanel  Padding="10  25 10 10">
                 <Image Source="../Resources/Folder.png" Height="95"  />
                 <TextBlock Text="{x:Bind Path=Name}" />
@@ -35,7 +35,7 @@
                 <ColumnDefinition Width="300" />
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal">
-                <Button 
+                <DropDownButton
                     Style="{StaticResource MenuButton}" 
                     ToolTipService.ToolTip="New File"
                     ToolTipService.Placement="Bottom">
@@ -43,7 +43,13 @@
                         <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">New</TextBlock>
                         <FontIcon FontSize="12" Glyph="&#xE710;" />
                     </StackPanel>
-                </Button>
+                    <DropDownButton.Flyout>
+                        <MenuFlyout Placement="Bottom">
+                            <MenuFlyoutItem Text="File" />
+                            <MenuFlyoutItem Text="Folder"/>
+                        </MenuFlyout>
+                    </DropDownButton.Flyout>
+                </DropDownButton>
                 <Button 
                     Style="{StaticResource MenuButton}"
                     ToolTipService.ToolTip="Copy"
@@ -105,7 +111,7 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <controls:AdaptiveGridView Grid.Row="1" 
+        <controls:AdaptiveGridView Grid.Row="1"
             ItemsSource="{x:Bind Path=ViewModel.DirectoryItems}" 
             ItemTemplate="{StaticResource GridItemTemplate}"
             SelectionMode="Extended"
