--- a/FileExplorer/App.xaml
+++ b/FileExplorer/App.xaml
@@ -3,7 +3,8 @@
     x:Class="FileExplorer.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FileExplorer">
+    xmlns:local="using:FileExplorer"
+    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -16,6 +17,7 @@
                 <Setter Property="Width" Value="40" />
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
