Implemented go back and forward through directories history mechanic Now user can navigate directories even better. Added new view model to handle navigation functionality and binded directory page and navigating view model to communicate with each other to provide navigation functionality in opened folder

--- a/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
@@ -17,11 +17,13 @@
         <StackPanel Orientation="Horizontal">
             <Button 
                 ToolTipService.ToolTip="Back"
+                Command="{x:Bind ViewModel.MoveBackCommand}"
                 Style="{StaticResource SmallIconButton}">
                 <FontIcon FontSize="13" Glyph="&#xE72B;" />
             </Button>
             <Button
                 ToolTipService.ToolTip="Forward"
+                Command="{x:Bind ViewModel.MoveForwardCommand}"
                 Style="{StaticResource SmallIconButton}">
                 <FontIcon FontSize="13" Glyph="&#xF0D2;" />
             </Button>
