Fixed issue with selecting files after navigation Added constants to identify a certain connection channel between view models

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -160,7 +160,7 @@
             >
 
             <interactivity:Interaction.Behaviors>
-                <behaviors:MultiSelectionBehavior SelectedItems="{x:Bind ViewModel.SelectedItems}" />
+                <behaviors:MultiSelectionBehavior SelectedItems="{x:Bind ViewModel.SelectedItems, Mode=OneWay}" />
             </interactivity:Interaction.Behaviors>
         </controls:AdaptiveGridView>
 
