Navigation is fully operational User can go back and forward properly He can refresh page Navigate up directory Use navigation BreadcrumbBar or input his new route to a text field which also navigates him properly to a new page
Code updates:
Got rid of KeyPressedBehavior since it  was replaced with community toolkit's solution.
Updated UI with navigate button (which uses route inputted into text box)

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -10,6 +10,8 @@
     xmlns:models="using:FileExplorer.Models"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:behaviors="using:FileExplorer.UI.Behaviors"
+    xmlns:toolkitBehaviors="using:CommunityToolkit.WinUI.UI.Behaviors"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -31,7 +33,6 @@
                               Padding="0 5 0 0"
                               Visibility="{x:Bind IsRenamed, Mode=OneWay,
                                 Converter = {StaticResource BoolToVisibilityConverter}}">
-
 
                         <interactivity:Interaction.Behaviors>
                             <interactivity:BehaviorCollection>
@@ -168,7 +169,9 @@
         </controls:AdaptiveGridView>
 
         <interactivity:Interaction.Behaviors>
-            <behaviors:KeyPressedBehavior Key="Delete" Command="{x:Bind ViewModel.DeleteSelectedItemsCommand}" />
+            <toolkitBehaviors:KeyDownTriggerBehavior Key="Delete">
+                <core:InvokeCommandAction Command="{x:Bind ViewModel.DeleteSelectedItemsCommand}" />
+            </toolkitBehaviors:KeyDownTriggerBehavior>
         </interactivity:Interaction.Behaviors>
     </Grid>
 </Page>
