--- a/FileExplorer/MainWindow.xaml
+++ b/FileExplorer/MainWindow.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window
+<views:WindowExtended
     x:Class="FileExplorer.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,11 +9,12 @@
     xmlns:views="using:FileExplorer.Views"
     xmlns:ui="using:FileExplorer.UI"
     xmlns:userControls="using:FileExplorer.UI.UserControls"
+    xmlns:winUiEx="using:WinUIEx"
     mc:Ignorable="d">
 
-    <Window.SystemBackdrop>
+    <views:WindowExtended.SystemBackdrop>
         <MicaBackdrop />
-    </Window.SystemBackdrop>
+    </views:WindowExtended.SystemBackdrop>
 
     <Grid>
 
@@ -61,4 +62,4 @@
         </Grid>
 
     </Grid>
-</Window>
+</views:WindowExtended>
